--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -1,8 +1,11 @@
 body, html
   height: 100%
+
 body
   font-family: 'Roboto', sans-serif
   +grid-row
+  background: $white
+
 h1, h2, h3, h4, h5, h6, p
   font-family: 'Roboto', sans-serif
   color: $black
