--- a/app/assets/stylesheets/navigation_bar.sass
+++ b/app/assets/stylesheets/navigation_bar.sass
@@ -1,9 +1,10 @@
 #bar
   width: 100%
-  position: relative
-  height: 35px
+  position: fixed
+  height: $bar-mobile-height
   color: $white
   background: $blue
+  z-index: $top
 
   #logo-container
     display: none
