--- a/app/assets/stylesheets/variables.css.sass
+++ b/app/assets/stylesheets/variables.css.sass
@@ -9,4 +9,12 @@ $secondary-blue: #2b74ff
 $row-width: 100%
 $sidebar-button-height: 40px
 $button-border-width: 0px
+$bar-mobile-height: 35px
+
+
+$super-top: 10000
+$top: 1000
+$mid: 100
+$low-mid: 10
+$bottom: 0
 
